src/main/java/com/example/demo/error/UserCreationException.java
package com.example.demo.error;

public class UserCreationException  extends RuntimeException {
    public UserCreationException(String msg) {
        super(msg);
    }
}
